my interior blog 2nd commit

--- a/interior2.html
+++ b/interior2.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
+    <div class="row">
+        <div class="column">
+            <img src="fins.jpg" alt="interior picture" style="width: 100%;">
+        </div>
+    </div>
+    <h1>OUR REVIEWS</h1>
+    <img src="r1.png" alt="our customers" 
+    style="float: left;height: 400px; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="r2.png"alt="our customers"
+    style="float: left;height: 400px; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+    <img src="r3.jpg" alt="our customers"
+    style="float: left;height: 400px; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+
     
 </body>
+
 </html>
