--- a/myinteriordecorblog.html
+++ b/myinteriordecorblog.html
@@ -25,11 +25,10 @@
         <h2>TOP NOTCH DESIGN</h2>
         <h5>Italy, Dec 7, 2017</h5>
 
-        <p>Boasting the latest design news, Interior Design stays on top of what’s trending in the industry. It covers
+        <p> <em> The latest design news, Interior Design stays on top of what’s trending in the industry. It covers
             everything from interior design ideas to the latest in material innovation. Plus, it also has an annual
             feature – Interior Design HOMES Best Kitchens & Homes – to zone in on the best designs. What’s more, design
-            professionals can order free samples from hundreds of brands.
-    </div>
+            professionals can order free samples from hundreds of brands.</em> 
     <div class="card">
         <h2>THE INTERIOR GALLERY</h2>
         <h5>Romania, Sep 2, 2017</h5>
@@ -47,11 +46,11 @@
 
         <img src="gui 6 (1).jpg" alt="our customers" 
         style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-        <img src="gui 6 (2).jpg"alt="our customers"
+        <img src="gui 6 (5).jpg"alt="our customers"
         style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-        <img src="gui 6 (3).jpg" alt="our customers"
+        <img src="gui 6 (4).jpg" alt="our customers"
         style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-        
+        <a href="interior2.html">Page 2</a>
 
 
 </body>
